Llamas-Terraform101-FinalProject/modules/networking/routes.tf
# 1. Public Route Table (Connects Public Subnets to IGW)
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }

  # Updated Naming Convention
  tags = merge(var.common_tags, { 
    Name = "${var.lastname}-${var.project_name}-Public-RT" 
  })
}

resource "aws_route_table_association" "public" {
  count          = 2
  subnet_id      = aws_subnet.public[count.index].id
  route_table_id = aws_route_table.public.id
}

# 2. Private Route Table (Connects Private Subnets to NAT Gateway)
resource "aws_route_table" "private" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.main.id
  }

  # Updated Naming Convention
  tags = merge(var.common_tags, { 
    Name = "${var.lastname}-${var.project_name}-Private-RT" 
  })
}

resource "aws_route_table_association" "private" {
  count          = 2
  subnet_id      = aws_subnet.private[count.index].id
  route_table_id = aws_route_table.private.id
}
